force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/Fiscal_Sponsorship_Annual_Report__c.object-meta.xml
<CustomObject>
    <description>Fiscal Sponsorship Annual Reports.  To be collected each year as long as the project is active.</description>
    <label>Fiscal Sponsorship Annual Report</label>
    <nameField>
        <label>Fiscal Sponsorship Annual Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiscal Sponsorship Annual Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>