force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Continue_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Continue_Sponsorship__c</fullName>
    <label>Continue Sponsorship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>