force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Date_Sponsorship_Began__c.field-meta.xml
<CustomField>
    <fullName>Date_Sponsorship_Began__c</fullName>
    <label>Date Sponsorship Began</label>
    <type>Date</type>
</CustomField>