force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature Name</label>
    <referenceTo>Feature__c</referenceTo>
    <relationshipLabel>Fiscal Sponsorship Annual Reports</relationshipLabel>
    <relationshipName>Fiscal_Sponsorship_Annual_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>