force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Festival_Screenings__c.field-meta.xml
<CustomField>
    <fullName>Festival_Screenings__c</fullName>
    <description>List any festivals where the film was screened or any festivals the film was submitted to for consideration.</description>
    <inlineHelpText>List any festivals where the film was screened or any festivals the film was submitted to for consideration.</inlineHelpText>
    <label>Festival Screenings:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>