force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Film_or_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Film_or_Project_Name__c</fullName>
    <label>Film or Project Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>