force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Fiscal_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsorship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiscal Sponsorship</label>
    <referenceTo>Fiscal_Sponsorship__c</referenceTo>
    <relationshipLabel>Fiscal Sponsorship Annual Reports</relationshipLabel>
    <relationshipName>Fiscal_Sponsorship_Annual_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>