force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/FS_Application_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>FS_Application_Name_Formula__c</fullName>
    <formula>Film_or_Project_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FS Application Name Formula</label>
    <type>Text</type>
</CustomField>