force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Grants_or_funds__c.field-meta.xml
<CustomField>
    <fullName>Grants_or_funds__c</fullName>
    <description>Deprecated field. Use the Outside Grants related list</description>
    <inlineHelpText>Deprecated field. Use the Outside Grants related list</inlineHelpText>
    <label>xxGrants or Funds:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>