force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Report_submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Report_submitted_by__c</fullName>
    <label>Report submitted by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>