force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Report_Submitted_User__c.field-meta.xml
<CustomField>
    <fullName>Report_Submitted_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Submitted User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fiscal_Sponsorship_Annual_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>