force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Report_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Report_Submitter_Email__c</fullName>
    <formula>Report_Submitted_User__r.Email</formula>
    <label>Report Submitter Email</label>
    <type>Text</type>
</CustomField>