force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Reported_by_Email__c.field-meta.xml
<CustomField>
    <fullName>Reported_by_Email__c</fullName>
    <label>Reported by Email</label>
    <type>Email</type>
</CustomField>