force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Social_Media_Posts__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Posts__c</fullName>
    <description>Include any links or posts you would like us to share on our social media channels about the film.</description>
    <inlineHelpText>Include any links or posts you would like us to share on our social media channels about the film.</inlineHelpText>
    <label>Social Media Posts:</label>
    <type>TextArea</type>
</CustomField>