force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Sponsorship_Year__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Year__c</fullName>
    <label>Sponsorship Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>