force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Streaming_Platforms__c.field-meta.xml
<CustomField>
    <fullName>Streaming_Platforms__c</fullName>
    <description>List any platforms where your film is currently streaming.</description>
    <inlineHelpText>List any platforms where your film is currently streaming.</inlineHelpText>
    <label>Streaming Platforms:</label>
    <type>TextArea</type>
</CustomField>