force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Submitted_Date_to_Text__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date_to_Text__c</fullName>
    <label>Submitted Date to Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>