force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/UtFC_Fiscal_Sponsor_Film__c.field-meta.xml
<CustomField>
    <fullName>UtFC_Fiscal_Sponsor_Film__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UtFC Fiscal Sponsor Film</label>
    <referenceTo>UtFC_Fiscal_Sponsor_Film__c</referenceTo>
    <relationshipLabel>Fiscal Sponsorship Annual Reports</relationshipLabel>
    <relationshipName>Fiscal_Sponsorship_Annual_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>