force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Would_you_like_to_continue_sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_to_continue_sponsorship__c</fullName>
    <description>Deprecated field. Use Continue Sponsorship instead,</description>
    <label>xxWould you like to continue sponsorship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>