force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/fields/Yearly_Progress__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Progress__c</fullName>
    <description>Deprecated field. Use Notes.</description>
    <inlineHelpText>Deprecated field. Use Notes.</inlineHelpText>
    <label>xxYearly Progress:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>