force-app/main/default/objects/Fiscal_Sponsorship_Annual_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UtFC_Fiscal_Sponsor_Film__c</columns>
    <columns>Date_Sponsorship_Began__c</columns>
    <columns>Date_Submitted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>